[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts3d/AISelectionScreen.gd" id="1_aisel"]

[sub_resource type="StyleBoxFlat" id="1_background"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="2_team_a_panel"]
bg_color = Color(0.2, 0.4, 0.9, 0.3)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="3_team_b_panel"]
bg_color = Color(0.9, 0.2, 0.2, 0.3)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="4_button_style"]
bg_color = Color(0.3, 0.5, 0.7, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="5_title_label"]
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 0.8)

[sub_resource type="LabelSettings" id="6_team_header"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 0.7)

[sub_resource type="LabelSettings" id="7_normal_label"]
font_size = 16

[node name="AISelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aisel")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1_background")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = -310.0
label_settings = SubResource("5_title_label")
text = "Configure Team AI Strategies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 80.0
offset_right = -50.0
offset_bottom = -120.0

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_constant_override/separation = 20

[node name="TeamASection" type="VBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_constant_override/separation = 10

[node name="TeamAHeader" type="Panel" parent="ScrollContainer/VBox/TeamASection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("2_team_a_panel")

[node name="HeaderLabel" type="Label" parent="ScrollContainer/VBox/TeamASection/TeamAHeader"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
label_settings = SubResource("6_team_header")
text = "ðŸ”µ Team A - Classic Strategies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamBSection" type="VBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_constant_override/separation = 10

[node name="TeamBHeader" type="Panel" parent="ScrollContainer/VBox/TeamBSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("3_team_b_panel")

[node name="HeaderLabel" type="Label" parent="ScrollContainer/VBox/TeamBSection/TeamBHeader"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
label_settings = SubResource("6_team_header")
text = "ðŸ”´ Team B - Advanced Strategies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = -20.0
theme_constant_override/separation = 10

[node name="AllClassicButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("4_button_style")
text = "All Classic AI"
tooltip_text = "Apply classic AI to both teams"

[node name="AllAdvancedButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("4_button_style")
text = "All Advanced AI"
tooltip_text = "Apply advanced AI to both teams"

[node name="ResetDefaultButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("4_button_style")
text = "Reset to Default"
tooltip_text = "Reset to original team configurations"

[node name="RandomAIButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("4_button_style")
text = "Random AI"
tooltip_text = "Randomize all AI selections for testing"

[node name="StartMatchButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("4_button_style")
text = "Start Match"
tooltip_text = "Begin the match with selected AI configurations"

